--- a/portfolio.html
+++ b/portfolio.html
@@ -68,18 +68,18 @@
               <a href="" class="filtr-link">
                 <div class="card-filtr">
                   <img
-                  class="photo"
-                  src="images/images-portfolio/img.jpg"
-                  alt="Страница"
-                  width="370"
-                />
-                <div class="overlay">
-                  <p class="text-overlay">
-                  Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
-                  Все это позволит посетителю получить исчерпывающие сведения о компании или частном
-                  лице.
-                </p>
-                </div>
+                    class="photo"
+                    src="images/images-portfolio/img.jpg"
+                    alt="Страница"
+                    width="370"
+                  />
+                  <div class="overlay">
+                    <p class="text-overlay">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                      компании или частном лице.
+                    </p>
+                  </div>
                 </div>
                 <div class="portfolio">
                   <h2 class="filtr-title">Технокряк</h2>
@@ -90,19 +90,19 @@
             <li class="item">
               <a href="" class="filtr-link">
                 <div class="card-filtr">
-                <img
-                  class="photo"
-                  src="images/images-portfolio/img1.jpg"
-                  alt="Постер"
-                  width="370"
-                />
-                <div class="overlay">
-                  <p class="text-overlay">
-                  Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
-                  Все это позволит посетителю получить исчерпывающие сведения о компании или частном
-                  лице.
-                </p>
-                </div>
+                  <img
+                    class="photo"
+                    src="images/images-portfolio/img1.jpg"
+                    alt="Постер"
+                    width="370"
+                  />
+                  <div class="overlay">
+                    <p class="text-overlay">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                      компании или частном лице.
+                    </p>
+                  </div>
                 </div>
                 <div class="portfolio">
                   <h2 class="filtr-title">Постер New Orlean vs Golden Star</h2>
@@ -113,19 +113,19 @@
             <li class="item">
               <a href="" class="filtr-link">
                 <div class="card-filtr">
-                <img
-                  class="photo"
-                  src="images/images-portfolio/img2.jpg"
-                  alt="Эмблема ресторана"
-                  width="370"
-                />
-                <div class="overlay">
-                  <p class="text-overlay">
-                  Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
-                  Все это позволит посетителю получить исчерпывающие сведения о компании или частном
-                  лице.
-                </p>
-                </div>
+                  <img
+                    class="photo"
+                    src="images/images-portfolio/img2.jpg"
+                    alt="Эмблема ресторана"
+                    width="370"
+                  />
+                  <div class="overlay">
+                    <p class="text-overlay">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                      компании или частном лице.
+                    </p>
+                  </div>
                 </div>
                 <div class="portfolio">
                   <h2 class="filtr-title">Ресторан Seafood</h2>
@@ -136,19 +136,19 @@
             <li class="item">
               <a href="" class="filtr-link">
                 <div class="card-filtr">
-                <img
-                  class="photo"
-                  src="images/images-portfolio/img3.jpg"
-                  alt="Наушники"
-                  width="370"
-                />
-                <div class="overlay">
-                  <p class="text-overlay">
-                  Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
-                  Все это позволит посетителю получить исчерпывающие сведения о компании или частном
-                  лице.
-                </p>
-                </div>
+                  <img
+                    class="photo"
+                    src="images/images-portfolio/img3.jpg"
+                    alt="Наушники"
+                    width="370"
+                  />
+                  <div class="overlay">
+                    <p class="text-overlay">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                      компании или частном лице.
+                    </p>
+                  </div>
                 </div>
                 <div class="portfolio">
                   <h2 class="filtr-title">Проект Prime</h2>
@@ -159,19 +159,19 @@
             <li class="item">
               <a href="" class="filtr-link">
                 <div class="card-filtr">
-                <img
-                  class="photo"
-                  src="images/images-portfolio/img4.jpg"
-                  alt="Коробки"
-                  width="370"
-                />
-                <div class="overlay">
-                  <p class="text-overlay">
-                  Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
-                  Все это позволит посетителю получить исчерпывающие сведения о компании или частном
-                  лице.
-                </p>
-                </div>
+                  <img
+                    class="photo"
+                    src="images/images-portfolio/img4.jpg"
+                    alt="Коробки"
+                    width="370"
+                  />
+                  <div class="overlay">
+                    <p class="text-overlay">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                      компании или частном лице.
+                    </p>
+                  </div>
                 </div>
                 <div class="portfolio">
                   <h2 class="filtr-title">Проект Boxes</h2>
@@ -182,19 +182,19 @@
             <li class="item">
               <a href="" class="filtr-link">
                 <div class="card-filtr">
-                <img
-                  class="photo"
-                  src="images/images-portfolio/img5.jpg"
-                  alt="Веб-сайт"
-                  width="370"
-                />
-                <div class="overlay">
-                  <p class="text-overlay">
-                  Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
-                  Все это позволит посетителю получить исчерпывающие сведения о компании или частном
-                  лице.
-                </p>
-                </div>
+                  <img
+                    class="photo"
+                    src="images/images-portfolio/img5.jpg"
+                    alt="Веб-сайт"
+                    width="370"
+                  />
+                  <div class="overlay">
+                    <p class="text-overlay">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                      компании или частном лице.
+                    </p>
+                  </div>
                 </div>
                 <div class="portfolio">
                   <h2 class="filtr-title">Inspiration has no Borders</h2>
@@ -205,14 +205,19 @@
             <li class="item">
               <a href="" class="filtr-link">
                 <div class="card-filtr">
-                <img class="photo" src="images/images-portfolio/img6.jpg" alt="Книга" width="370" />
-                <div class="overlay">
-                  <p class="text-overlay">
-                  Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
-                  Все это позволит посетителю получить исчерпывающие сведения о компании или частном
-                  лице.
-                </p>
-                </div>
+                  <img
+                    class="photo"
+                    src="images/images-portfolio/img6.jpg"
+                    alt="Книга"
+                    width="370"
+                  />
+                  <div class="overlay">
+                    <p class="text-overlay">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                      компании или частном лице.
+                    </p>
+                  </div>
                 </div>
                 <div class="portfolio">
                   <h2 class="filtr-title">Издание Limited Edition</h2>
@@ -223,19 +228,19 @@
             <li class="item">
               <a href="" class="filtr-link">
                 <div class="card-filtr">
-                <img
-                  class="photo"
-                  src="images/images-portfolio/img7.jpg"
-                  alt="Проект"
-                  width="370"
-                />
-                <div class="overlay">
-                  <p class="text-overlay">
-                  Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
-                  Все это позволит посетителю получить исчерпывающие сведения о компании или частном
-                  лице.
-                </p>
-                </div>
+                  <img
+                    class="photo"
+                    src="images/images-portfolio/img7.jpg"
+                    alt="Проект"
+                    width="370"
+                  />
+                  <div class="overlay">
+                    <p class="text-overlay">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                      компании или частном лице.
+                    </p>
+                  </div>
                 </div>
                 <div class="portfolio">
                   <h2 class="filtr-title">Проект LAB</h2>
@@ -246,19 +251,19 @@
             <li class="item">
               <a href="" class="filtr-link">
                 <div class="card-filtr">
-                <img
-                  class="photo"
-                  src="images/images-portfolio/img8.jpg"
-                  alt="Веб-страница"
-                  width="370"
-                />
-                <div class="overlay">
-                  <p class="text-overlay">
-                  Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
-                  Все это позволит посетителю получить исчерпывающие сведения о компании или частном
-                  лице.
-                </p>
-                </div>
+                  <img
+                    class="photo"
+                    src="images/images-portfolio/img8.jpg"
+                    alt="Веб-страница"
+                    width="370"
+                  />
+                  <div class="overlay">
+                    <p class="text-overlay">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                      компании или частном лице.
+                    </p>
+                  </div>
                 </div>
                 <div class="portfolio">
                   <h2 class="filtr-title">Growing Business</h2>
@@ -286,6 +291,9 @@
             </li>
           </ul>
         </div>
+
+        <!-- Присоединяйтесь -->
+
         <div class="join">
           <h2 class="join-title">присоединяйтесь</h2>
           <ul class="join-list">
@@ -342,6 +350,20 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="sub">
+          <b class="sub-title">Подпишитесь на рассылку</b>
+          <form class="sub-form" name="sub-form">
+            <label for="sub-form">
+              <input class="email" type="email" name="mail-name" placeholder="E-mail" />
+            </label>
+            <button class="sub-button" type="submit">
+              <span class="error">Подписаться</span>
+              <svg class="icon-telegram" width="24" height="24">
+                <use href="./images/sprite.svg#icon-telegram"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
