--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 </label>
 
                 <label class="policy">
-                  <input class="checkbox visually-hidden" type="checkbox" />
+                  <input class="checkbox visually-hidden" type="checkbox" name="checkbox" />
                   <span class="mark">
                     <svg class="deal-icons" width="18" height="18">
                       <use href="./images/sprite.svg#icon-check"></use>
