--- a/index.html
+++ b/index.html
@@ -642,13 +642,14 @@
           <b class="sub-title">Подпишитесь на рассылку</b>
           <form class="sub-form" name="sub-form">
             <label for="sub-form">
-              <input class="email" type="email" name="mail-name" placeholder="E-mail" />
+              <input class="mail-name" type="text" name="mail-name" id="sub-form" placeholder="E-mail" />
             </label>
             <button class="sub-button" type="submit">
-              <span class="error">Подписаться</span>
+              <span class="btn-telegram">Подписаться
               <svg class="icon-telegram" width="24" height="24">
                 <use href="./images/sprite.svg#icon-telegram"></use>
               </svg>
+              </span>
             </button>
           </form>
         </div>
